# house-plant-hub-api

./: .flake8  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
auth_backend/: auth.py  serializer.py  views.py
house_plant_hub_api/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
house_plant_hub_backend/: admin.py  apps.py  models.py  serializers.py  views.py
house_plant_hub_backend/migrations/: 0001_initial.py  0002_plant_image_url.py  0002_rename_plant_id_moisturereading_plant.py  0003_remove_moisturereading_battery_level.py  0004_alter_plant_image_url.py
